<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_2In" Id="{0553722c-666a-4760-9ddd-2f29bfa1469c}">
    <Declaration><![CDATA[TYPE ST_2In :
STRUCT
	ST_in1	AT %I*: ST_EL1008;
	ST_in2	AT %I*: ST_EL1008;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>